[project]
name = "langgraph-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
]
